[package]
name = "toywoot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
crossbeam-channel = "0.5.9"
crossterm = "0.27.0"
env_logger = "0.10.1"
log = "0.4.20"
ratatui = "*"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tui-textarea = "*"
